--- a/webapp/package.json
+++ b/webapp/package.json
@@ -13,6 +13,7 @@
     "@mantine/core": "^7.14.2",
     "@mantine/form": "^7.14.2",
     "@mantine/hooks": "^7.14.2",
+    "@tanstack/react-query": "^5.62.2",
     "@telegram-apps/telegram-ui": "^2.1.8",
     "@vkruglikov/react-telegram-web-app": "^2.1.9",
     "ant": "^0.0.0",
@@ -20,10 +21,12 @@
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-query": "^3.39.3",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.0.1",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
